<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.programmingpenguin.copingin3.Main2Activity">

    <TextView
        android:text="@string/description"
        android:textColor="@color/colorAccent"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:id="@+id/description"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <ToggleButton
        android:text="ToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toggleButton"
        android:textOn="@string/toggle_on"
        android:textOff="@string/toggle_off"
        app:layout_constraintRight_toLeftOf="@+id/time"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginStart="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="32dp"
        app:layout_constraintBottom_toTopOf="@+id/done"
        app:layout_constraintHorizontal_bias="0.66"
        app:layout_constraintVertical_bias="0.43" />

    <EditText
        android:layout_width="79dp"
        android:layout_height="54dp"
        android:inputType="time"
        android:ems="10"
        android:hint="@string/time"
        android:textAlignment="center"
        android:id="@+id/time"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintBottom_toTopOf="@+id/done"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintVertical_bias="0.29000002" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/burpess"
        android:id="@+id/imageView3"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/description"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <Button
        android:text="@string/done"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/done"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/balance"
        android:id="@+id/imageView2"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:layout_width="114dp"
        android:layout_height="183dp"
        app:srcCompat="@drawable/age"
        android:id="@+id/imageView"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintRight_toLeftOf="@+id/imageView2"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

</android.support.constraint.ConstraintLayout>
